<resources>
    <string name="app_name" translatable="false">Note Book</string>
    <string name="search_name" translatable="false">search</string>
    <string name="add_infomation" translatable="false">Add infomation</string>
    <string name="enter_name" translatable="false">Enter name</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="title" translatable="false">Title</string>
    <string name="content" translatable="false">Content</string>
    <string name="edit_successfully">Edit successfully</string>
    <string name="add_successfully">Add successfully</string>
    <string name="select_action">Select The Action</string>
    <string name="list_note">List note</string>
    <string name="add">Add note</string>
    <string name="Edit">Edit note</string>
    <string name="detail">Detail note</string>
    <string name="delete">Delete note</string>
    <string name="app_ads">ca-app-pub-5708334770944175~1518913961</string>
    <string name="id_banner">ca-app-pub-5708334770944175/6388097265</string>
    <string name="id_interstitial">ca-app-pub-5708334770944175/4300866268</string>
    <string name="please_enter_name">Please enter information</string>
    <string name="title_edit">Edit information</string>
    <string name="enter_info">Enter information</string>
    <string name="exit">Exit</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
</resources>
