<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_margin="5dp"
    android:id="@+id/ln"
    android:background="@drawable/border_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="@dimen/_18dp"
            android:text="@string/select_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/tvAdd"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="@dimen/_13dp"
            android:text="@string/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/tvListNote"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="@dimen/_13dp"
            android:text="@string/list_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/tvEdit"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="@dimen/_13dp"
            android:text="@string/Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/tvDelete"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="@dimen/_13dp"
            android:text="@string/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>